#82 [fix] 커뮤니티 탭 색상 변경 커뮤니티 탭 비선택 색상 Gray

--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -50,7 +50,7 @@
         app:tabIndicatorFullWidth="true"
         app:tabSelectedTextColor="@color/black"
         app:tabTextAppearance="@style/MySelectedTabTextAppearance"
-        app:tabTextColor="@color/lightGray"
+        app:tabTextColor="@color/gray"
         app:tabIndicatorColor="@color/third"
         app:tabIndicatorHeight="2dp"
         app:tabIndicatorGravity="bottom"
