--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -7,4 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.vote.VoteActivity">
 
+   <androidx.fragment.app.FragmentContainerView
+       android:id="@+id/voteContainer"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
