--- a/app/src/main/res/layout/fragment_date_picker_dialog.xml
+++ b/app/src/main/res/layout/fragment_date_picker_dialog.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    style="@style/Widget.Material3.CardView.Filled"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/dialog_round_white"
-    android:gravity="center"
     android:orientation="vertical"
-    android:padding="25dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="30dp"
+    app:contentPadding="30dp"
     tools:context=".ui.login.DatePickerDialogFragment">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="생년월일"
-        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="생년월일"
+            android:textSize="20sp" />
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <NumberPicker
-                android:id="@+id/year_picker"
+                android:id="@+id/date_year_picker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1" />
 
             <NumberPicker
-                android:id="@+id/month_picker"
+                android:id="@+id/date_month_picker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -43,7 +43,7 @@
                 android:layout_weight="1" />
 
             <NumberPicker
-                android:id="@+id/day_picker"
+                android:id="@+id/date_day_picker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -58,7 +58,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/cancel_button"
+                android:id="@+id/date_picker_cancel_button"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginRight="8dp"
@@ -75,7 +75,7 @@
                 app:strokeWidth="1dp" />
 
             <Button
-                android:id="@+id/confirm_button"
+                android:id="@+id/date_picker_confirm_button"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="8dp"
@@ -89,5 +89,4 @@
                 app:cornerRadius="10dp" />
         </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
