--- a/app/src/main/res/layout/item_apartment.xml
+++ b/app/src/main/res/layout/item_apartment.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:adjustViewBounds="true"
+        android:tint="@color/second"
         app:srcCompat="@drawable/icon_apartment" />
 
     <LinearLayout
@@ -20,6 +21,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="5dp"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="5dp">
 
@@ -30,11 +32,6 @@
             android:text="아파트 이름"
             android:textColor="@color/black"
             android:textSize="19sp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/item_apartment_address"
