#66 [Feat] 유효성 검사

--- a/app/src/main/res/layout/fragment_sign_up3.xml
+++ b/app/src/main/res/layout/fragment_sign_up3.xml
@@ -39,7 +39,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <TextView
@@ -89,7 +89,7 @@
     </RadioGroup>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="이메일"
