--- a/app/src/main/res/layout/fragment_sign_up4.xml
+++ b/app/src/main/res/layout/fragment_sign_up4.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="20dp"
@@ -37,56 +37,77 @@
             android:textSize="12sp" />
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="아파트명"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/signup4_apart_layout"
-        style="@style/Widget.Material3.CardView.Filled"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:cardBackgroundColor="#F5F5F5"
-        app:contentPadding="15dp"
-        app:rippleColor="@color/fourth">
+        android:layout_marginTop="30dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/signup4_apart_edit_text"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:hint="아파트명 검색"
-                android:inputType="text"
-                android:textColorHint="@color/gray"
-                android:textSize="15sp"
-                android:focusable="false"
-                android:clickable="false"/>
-
-            <ImageView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_search"
-                android:focusable="false"
-                android:clickable="false"/>
+                android:layout_marginEnd="2dp"
+                android:text="아파트명"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*"
+                android:textColor="#D50000"
+                android:textSize="16sp" />
+
         </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/signup4_apart_layout"
+            style="@style/Widget.Material3.CardView.Filled"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="#F5F5F5"
+            app:contentPadding="15dp"
+            app:rippleColor="@color/fourth">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/signup4_apart_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:hint="아파트명"
+                    android:textColorHint="@color/gray"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:src="@drawable/icon_search" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/signup4_dongho_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:orientation="vertical">
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        tools:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,36 +121,31 @@
                 android:text="동호수"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="*"
-                android:textColor="#D50000"
-                android:textSize="16sp" />
         </LinearLayout>
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/signup4_select_apart_dong_ho"
             style="@style/Widget.Material3.CardView.Filled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             app:cardBackgroundColor="#F5F5F5"
-            app:contentPadding="15dp">
+            app:contentPadding="15dp"
+            app:rippleColor="@color/fourth">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginHorizontal="15dp"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginHorizontal="15dp">
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/signup4_apart_dong"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:inputType="text"
-                    android:text="000동"
+                    android:text="동"
                     android:textAlignment="center"
                     android:textSize="14sp" />
 
@@ -142,10 +158,11 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/signup4_apart_ho"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="000호"
+                    android:text="호"
                     android:textAlignment="center"
                     android:textSize="14sp" />
 
@@ -162,8 +179,9 @@
         android:id="@+id/signup4_agree_button"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:alpha="0.5"
         android:backgroundTint="@color/third"
-        android:enabled="true"
+        android:enabled="false"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="회원가입"
