--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -30,6 +30,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="20dp"
-            android:paddingStart="16dp">
+            android:paddingStart="20dp">
 
             <TextView
                 android:id="@+id/userInfoName"
@@ -105,12 +106,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="15dp"
-                android:text="TextView"
-                android:textSize="14sp"
                 android:fontFamily="@font/notosans_bold"
                 android:includeFontPadding="false"
+                android:text="TextView"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/userInfoTextViewEmail"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,11 +123,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="16dp"
-                android:text="TextView"
-                android:textSize="14sp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/notosans_bold"
                 android:includeFontPadding="false"
+                android:text="TextView"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userInfoTextViewBirth" />
@@ -137,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="268dp"
                 android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/notosans_bold"
                 android:includeFontPadding="false"
                 android:text="TextView"
@@ -168,11 +169,11 @@
                 android:id="@+id/userInfoTextViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="TextView"
-                android:textSize="14sp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/notosans_bold"
                 android:includeFontPadding="false"
+                android:text="TextView"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -199,11 +200,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="16dp"
-                android:text="TextView"
-                android:textSize="14sp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/notosans_bold"
                 android:includeFontPadding="false"
+                android:text="TextView"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userInfoTextViewEmail" />
