--- a/app/src/main/res/layout/fragment_parking_check.xml
+++ b/app/src/main/res/layout/fragment_parking_check.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/floatButtonReserveParking"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     tools:context=".ui.parking.ParkingCheckFragment">
 
@@ -33,18 +34,17 @@
     </com.google.android.material.appbar.MaterialToolbar>
 
 
-
     <TextView
         android:id="@+id/parkingReserveCount"
-        app:layout_constraintTop_toBottomOf="@id/toolbarParking"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="이번달 남은 예약 횟수 : 4회"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/notosans_semibold"
-        android:layout_marginTop="20dp"/>
+        android:text="이번달 남은 예약 횟수 : 4회"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbarParking" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardViewParking"
@@ -96,8 +96,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:textColor="@color/third"
-                android:text="세대별 월 예약 가능 횟수는 10회입니다.\n매달 1일 횟수가 초기화 됩니다!" />
+                android:text="세대별 월 예약 가능 횟수는 10회입니다.\n매달 1일 횟수가 초기화 됩니다!"
+                android:textColor="@color/third" />
 
 
         </LinearLayout>
@@ -108,22 +108,22 @@
         android:id="@+id/visitParkingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/cardViewParking"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="방문 내역"
+        android:textColor="@color/second"
         android:textSize="10sp"
-        android:textColor="@color/second"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardViewParking" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:padding="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/visitParkingText">
 
         <androidx.recyclerview.widget.RecyclerView
