--- a/app/src/main/res/layout/fragment_entire_menu.xml
+++ b/app/src/main/res/layout/fragment_entire_menu.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:transitionGroup="true"
     tools:context=".ui.entiremenu.EntireMenuFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -34,8 +35,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbarMenu"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbarMenu">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -192,10 +193,10 @@
                 android:id="@+id/textExtra"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/notosans_bold"
                 android:paddingLeft="20dp"
                 android:paddingTop="20dp"
-                android:layout_marginTop="10dp"
                 android:text="추가 기능"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -210,9 +211,9 @@
                 android:text="방문 주차 예약"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                app:rippleColor="@color/fourth"
                 app:icon="@drawable/icon_person"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
             <Button
                 android:id="@+id/buttonVoteMenu"
@@ -236,18 +237,18 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="start|center_vertical"
                 android:text="소방 점검"
-                android:textSize="16sp"
                 android:textColor="@color/black"
-                app:rippleColor="@color/fourth"
+                android:textSize="16sp"
                 app:icon="@drawable/icon_fire"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp" />
 
             <TextView
                 android:id="@+id/textView26"
@@ -271,9 +272,9 @@
                 android:text="관리사무소 문의"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                app:rippleColor="@color/fourth"
                 app:icon="@drawable/icon_management_office"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
             <Button
                 android:id="@+id/buttonBroadcastMenu"
@@ -283,11 +284,11 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="안내 방송"
-                android:textSize="16sp"
                 android:textColor="@color/black"
-                app:rippleColor="@color/fourth"
+                android:textSize="16sp"
                 app:icon="@drawable/icon_campaign"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
             <Button
                 android:id="@+id/buttonAptSchduleMenu"
@@ -296,12 +297,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:gravity="start|center_horizontal"
-                android:textSize="16sp"
                 android:text="아파트 일정"
                 android:textColor="@color/black"
-                app:rippleColor="@color/fourth"
+                android:textSize="16sp"
                 app:icon="@drawable/icon_calendar"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
             <Button
                 android:id="@+id/buttonAptInfoMenu"
@@ -311,18 +312,18 @@
                 android:layout_marginLeft="10dp"
                 android:gravity="start|center_horizontal"
                 android:text="아파트 운영정보"
-                android:textSize="16sp"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 app:icon="@drawable/icon_apartment"
-                app:rippleColor="@color/fourth"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="20dp" />
 
             <Button
                 android:id="@+id/buttonUserLogout"
@@ -335,9 +336,9 @@
                 android:text="로그아웃"
                 android:textColor="@color/black"
                 android:textSize="16sp"
-                app:rippleColor="@color/fourth"
                 app:icon="@drawable/icon_logout"
-                app:iconTint="@color/black" />
+                app:iconTint="@color/black"
+                app:rippleColor="@color/fourth" />
 
 
             <LinearLayout
