--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
+    android:transitionGroup="true"
     tools:context=".ui.location.LocationFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" >
+        android:theme="?attr/actionBarTheme">
 
         <TextView
             android:id="@+id/locationToolbarText"
@@ -35,46 +36,46 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         app:tabBackground="@color/white"
-        app:tabIndicatorHeight="3dp"
-        app:tabIndicatorGravity="bottom"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/third"
         app:tabIndicatorFullWidth="true"
+        app:tabIndicatorGravity="bottom"
+        app:tabIndicatorHeight="3dp"
         app:tabRippleColor="@android:color/transparent"
         app:tabSelectedTextColor="@color/third"
-        app:tabTextColor="@color/lightGray" >
+        app:tabTextColor="@color/lightGray">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="전체"/>
+            android:text="전체" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="음식점"/>
+            android:text="음식점" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="병원"/>
+            android:text="병원" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="약국"/>
+            android:text="약국" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="카페"/>
+            android:text="카페" />
 
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPagerLocation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
