--- a/app/src/main/res/layout/fragment_fire_extinguisher2_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_fire_extinguisher2_bottom_sheet.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bottom_sheet_rounding"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".ui.entiremenu.FireCheck.FireProcessBottomSheetFragment">
+    tools:context=".ui.entiremenu.FireCheck.FireExtinguisher2BottomSheetFragment" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,23 +15,23 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageViewFireProcessIcon"
+            android:id="@+id/imageViewFireExtinguisher2"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/icon_fire_extinguisher" />
 
         <TextView
-            android:id="@+id/textViewFireProcessSubject"
+            android:id="@+id/textViewFireExtinguisher2Subject"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosans_semibold"
             android:includeFontPadding="false"
-            android:text="주방자동소화장치 점검 방법"
+            android:text="자동확산 소화기  점검 방법"
             android:textSize="18sp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textViewFireProcessSub"
+        android:id="@+id/textViewFireExtinguisher2Mean"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -42,7 +41,7 @@
         android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/textViewFireProcess"
+        android:id="@+id/textViewFireExtinguisher2Content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -50,5 +49,4 @@
         android:gravity="center|left"
         android:text="1. 지시 압력계의 바늘이 녹색 범위 안에 있다면 ‘정상’을, 녹색범위를 벗어나 있다면 ‘불량’을  의미한다. \n\n2. 설비의 “전원표시등”에 항상 녹색불이 점등돼있어야 하며, 만일 전원표시등에 불이 들어오지 않는다면 이는 ‘불량’을 의미한다. "
         android:textSize="14sp" />
-
 </LinearLayout>
